Separate elements into own divs and right-align search bar

--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
-#inner {
+#titleBarDiv, #searchBarDiv {
     color: green;
+    display: inline-block;
 }
+
+#searchBarDiv {
+    float: right;
+}
+
 #nav {
     color: rgb(52, 52, 52);
 }
